--- a/webpage/style.css
+++ b/webpage/style.css
@@ -100,8 +100,8 @@ nav{
     font-weight: 700;
     letter-spacing: -1px;
     background: linear-gradient(135deg,#ffffff 0%, var(--primary)100%);
-    -webkit-background-clip: text;
-    /* color: transparent; */
+    /* -webkit-background-clip: text; */
+     color: transparent; 
 }
 .hero p{
     font-size: 1.25rem;
